# Kernos

./: .env.example  .gitignore  BLUEPRINT-REVISION-DRAFT.md  CLAUDE.md  DECISIONS.md  KERNEL-ARCHITECTURE-OUTLINE-v2.md  KERNOS-BLUEPRINT.md  LICENSE  README.md  SPEC-1A4-persistence.md  evals.sh  kernos-cli  kit_onboard.txt  pyproject.toml  requirements.txt  start.sh  temp osbuilder
config/: llm_benchmark_snapshot.json
docs/: ADAPTER-GUIDE.md  ARCHITECTURE-NOTEBOOK-ADDITION.md  ARCHITECTURE-NOTEBOOK-KIT-RESEARCH.md  ARCHITECTURE-NOTEBOOK.md  BLUEPRINT.md  CC-IMPLEMENTATION-CONTRACT.md  CONTEXT-SPACES-DESIGN.md  DESIGN-BUILD-THE-MISSING-HANDLE.md  TECHNICAL-ARCHITECTURE.md  env-protection.md  index.html  index.md  install.md  kernos-introduction.md  privacy.html  roadmap.md  terms.html  updating-llm-benchmark.md
kernos/: app.py  chat.py  cli.py  discord_bot.py  server.py  sms_poller.py  telegram_poller.py  utils.py
live-tests/: 1A2-sms-gateway.md  1A2b-discord-adapter.md  1A3-calendar-mcp.md  1A4-persistence.md  2A-entity-resolution.md  LIVE-TESTING-PROTOCOL.md
research/: 1-structured-outputs.md  2-entity-resolution.md  3-memory-staleness.md  4-behavioral-contracts.md  CWA-BRIDGE-ARCHITECTURE.md  CWA-STREAMING-TOOL-EXECUTION.md  README.md
specs/: BUGFIX-DATE-SCHEMA-TOOLAUDIT.md  BUGFIX-OBSERVABILITY-SOUL-HALLUCINATION.md  README.md  REPO-CLEANUP.md  SPEC Stewardship Layer.md  SPEC-1B3-CAPABILITY-GRAPH.md  SPEC-1B5-AGENT-TEMPLATES.md  SPEC-2A-PATCH-ROLE-LINKING.md  SPEC-3E-A-OUTBOUND-MESSAGING.md  SPEC-3E-A-REVISION-SMS-POLLING.md  SPEC-CONVERSATION-LOGS-P4.md  (+2 more)
(+693 files in other folders)
