[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kernos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.49.0",
    "python-dotenv>=1.0.0",
    "twilio>=9.0.0",
    "discord.py>=2.3.0",
    "mcp>=1.26.0",
    "filelock>=3.0",
    "rapidfuzz>=3.0.0",
    "jellyfish>=1.0.0",
    "voyageai>=0.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["kernos*"]
